tests/sksl/errors/ReservedNameFvec4.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'fvec4'
1 error
